--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,15 @@ buildscript {
 plugins {
     id 'java'
     id 'war'
-    id 'org.akhikhl.gretty'
 }
 
+apply plugin: 'org.akhikhl.gretty'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 compileJava.options.encoding = 'UTF-8'
 
-apply from : 'lib.gradle'
+apply from: 'lib.gradle'
 
 gretty {
     httpPort = 8080
