--- a/lib.gradle
+++ b/lib.gradle
@@ -5,8 +5,15 @@ ext {
     logbackVersion = '1.0.13'
 }
 
+List springLib = [
+        "org.springframework:spring-core:${springVersion}",
+        "org.springframework:spring-context:${springVersion}",
+        "org.springframework:spring-webmvc:${springVersion}"
+]
+
 dependencies {
     compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
+    compile springLib
     compile 'com.google.guava:guava:23.0'
     testCompile 'junit:junit:4.12'
 }
