gretty gradle setting modified

--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,16 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'org.akhikhl.gretty:gretty:+'
+        classpath 'org.akhikhl.gretty:gretty:2.0.0'
     }
 }
 
 plugins {
     id 'java'
     id 'war'
+    id 'org.akhikhl.gretty' version '2.0.0'
 }
 
-apply plugin: 'org.akhikhl.gretty'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
